--- a/pages/style/styleSesioPage.css
+++ b/pages/style/styleSesioPage.css
@@ -91,7 +91,7 @@ button:hover span:nth-child(4){
 	top: 0;
 }
 main{
-	background: url('/assets/sesion.jpg');
+	background: url('C:/Users/asusi/Sena-Library/assets/sesion.jpg');
 	background-position: center;
 	background-size: cover;
 	width: 100%;
