--- a/pages/style/styleSesioPage.css
+++ b/pages/style/styleSesioPage.css
@@ -96,6 +96,7 @@ main{
 	background-size: cover;
 	width: 100%;
 	height: 100vh;
+	padding: auto;
 	display: flex;
 	justify-content: center;
 	align-items: center;
