--- a/style/style.css
+++ b/style/style.css
@@ -22,6 +22,16 @@
 main{
 	background: linear-gradient(to top, var(--darkRed), var(--ultradark));
 }
+@keyframes show{
+	from{
+		opacity: .5;
+		scale: 80%;
+	}
+	to{
+		opacity: 1;
+		scale: 100%;
+	}
+}
 button{
 	background-color: var(--vanilla);
 	position: relative;
@@ -275,6 +285,12 @@ nav .nav-link.active {
 	padding: 0 5px;
 	margin: 2px;
 	border: solid 1px var(--darkRedTransparent);
+	view-timeline-name: --image;
+	view-timeline-axis: block;
+	animation-timeline: --image;
+	animation-name: show;
+	animation-range: entry .1% cover 30% ;
+	animation-fill-mode: both;
 }
 .categorie-book > div{
 	display: flex;
